# hspec-jenkins

./: .gitignore  README.md  hspec-jenkins.cabal  stack.yaml
example/: example.cabal
example/test/: ExampleSpec.hs  Spec.hs  test.hs
lib/: Sample.hs
lib/Test/Hspec/Formatters/: Jenkins.hs
test/: XmlFormatter.hs  example.hs
