name: hspec-jenkins
version: 0.1.0
description: Jenkins-friendly XML formatter for HSpec
author: eagletmt
maintainer: eagletmt@gmail.com
build-type: Simple
cabal-version: >= 1.8

library
  build-depends:
      base == 4.*
    , hspec >= 1.4
    , blaze-markup
  hs-source-dirs: lib
  ghc-options: -Wall -W
  exposed-modules:
    Test.Hspec.Formatters.Jenkins
