name: example
version: 0.1.0
author: eagletmt
maintainer: eagletmt@gmail.com
build-type: Simple
cabal-version: >= 1.8

library
  build-depends: base == 4.*
  hs-source-dirs: lib
  ghc-options: -Wall -W
  exposed-modules: Example

test-suite test
  build-depends:
      base == 4.*
    , example
    , hspec
    , hspec-jenkins
  hs-source-dirs: test
  ghc-options: -Wall -W
  type: exitcode-stdio-1.0
  main-is: test.hs
